# codfish

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: clang-format.yml  ruff.yml
docs/: learner_architecture.md  learner_contracts.md  learner_encoding_and_replay.md  learner_runloop_notes.md  mcts_architecture.md  mcts_contracts.md  mcts_searcher_notes.md  mcts_storage.md  project_architecture.md
python/codfish/: __init__.py  _dict_validation.py  _run_layout.py  artifacts.py  eval_only.py  orchestrator.py
python/codfish/learner/: __init__.py  _alphazero_resnet.py  _api.py  _checkpoint.py  _replay.py  _runner.py  _trainer.py  _types.py  _wandb.py
python/tests/: test_artifacts.py  test_learner.py  test_orchestrator.py
src/actor/backends/: aoti_backend.cc  aoti_backend.h  mock_backend.cc  mock_backend.h  mock_backend_test.cc
src/actor/mcts/: aoti_match.cc  aoti_match.h  aoti_selfplay.cc  aoti_selfplay.h  chunk_writer_runtime.cc  chunk_writer_runtime.h  chunk_writer_runtime_test.cc  game_runner.cc  game_runner.h  game_runner_test.cc  inference_runtime.cc  inference_runtime.h  inference_runtime_test.cc  match_coordinator.cc  match_coordinator.h  match_coordinator_test.cc  mock_selfplay.cc  mock_selfplay.h  raw_chunk_format.cc  raw_chunk_format.h  raw_chunk_format_test.cc  request_reply_coroutine.h  runtime_types.h  search_coordinator.cc  search_coordinator.h  search_coordinator_smoke_test.cc  search_coordinator_test.cc  search_types.h  searcher.h  thread_safe_queue.h  thread_safe_queue_test.cc  training_types.h  worker_runtime.cc  worker_runtime.h  worker_runtime_test.cc
src/actor/mcts/gumbel/: gumbel.cc  gumbel.h  gumbel_test.cc
src/actor/mcts/output/: chunk_writer_runtime.cc  chunk_writer_runtime.h  chunk_writer_runtime_test.cc  raw_chunk_format.cc  raw_chunk_format.h  raw_chunk_format_test.cc
src/actor/mcts/primitives/: thread_safe_queue_test.cc
src/actor/mcts/runtime/: game_runner.cc  game_runner.h  game_runner_test.cc  inference_runtime.cc  inference_runtime.h  inference_runtime_test.cc  match_game_runner.cc  match_game_runner.h  match_game_runner_test.cc  match_types.h  task_types.h  worker_runtime.cc  worker_runtime.h  worker_runtime_test.cc
src/actor/mcts/searchers/gumbel/: gumbel_mcts.cc  gumbel_mcts_test.cc
src/engine/: encoder.cc  encoder.h  encoder_test.cc
src/engine/infer/: inference_backend.h  inference_types.h  model_manifest.h  status.h
src/lc0/: move_index.cc  move_index.h  move_index_test.cc
src/lc0/chess/: board.cc  board_test.cc  callbacks.h  error.h  gamestate.cc  pgn.h  position_test.cc
src/learner/: public_api_test.cc  python_bindings.cc  raw_chunk_golden_writer.cc  raw_types.h  sample_facade.cc  sample_facade.h  sample_facade_internal.h  sample_facade_public_test.cc  sample_facade_test.cc  storage_facade.cc  storage_facade.h  storage_facade_test.cc
tools/: clang_format.sh  install_git_hooks.sh
