[project]
name = "codfish"
version = "0.0.0"
description = "Chess engine training project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2,<3",
    "torch",
    "wandb",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
src = ["python"]

[tool.ruff.lint]
extend-select = ["I"]
